add maven-failsafe-plugin